# agile-py

./: .gitignore  LICENSE  README.md  TODO  VERSIONS.md  pyproject.toml  setup.cfg
agile/utils/: log_helper.py  task_initializer.py  timing.py
agile_commons/: pyproject.toml
agile_commons/cache/: base_cahce.py  memory_cache.py
agile_commons/config/: agile_logger.yaml
agile_commons/tests/: test_common_result.py
agile_commons/utils/: common_response.py  common_result.py  extract_chinese_time_range.py  task_initializer.py  timing.py
agile_commons/web/: common_result.py
libs/agile_commons/: README.md  pyproject.toml
libs/agile_commons/src/: __init__.py  agile_shell.py
libs/agile_commons/src/cache/: base_cahce.py  memory_cache.py
libs/agile_commons/src/utils/: __init__.py  env_helper.py  extract_chinese_time_range.py  extract_chinese_time_range_v2.py  extract_time_range.py  log_helper.py  singleton.py  task_initializer.py  timing.py
libs/agile_commons/src/web/: common_result.py
libs/agile_commons/tests/: test_common_result.py  test_env_helper.py  test_extract_chinese_time_range.py  test_extract_chinese_time_range_v2.py  test_extract_time_range.py
src/: __init__.py
src/agile/agent/tools/: base_structured_tools.py  tool_decorators.py  tool_response.py
src/agile/agent/tools/impl/: comm_executive_capacity_tools.py
src/agile/cache/: __init__.py  base_cahce.py  memory_cache.py
src/agile/commons/: __init__.py  biz_error.py  enum.py
src/agile/db/vector/: __init__.py
src/agile/db/vector/base/: base_embed_model.py
src/agile/db/vector/milvus/: milvus_manager.py  milvus_retriever.py
src/agile/search/: __init__.py  bm25_searcher.py
src/agile/utils/: __init__.py  app_settings.py  argparser.py  env_helper.py  log_helper.py  pydantic_extension.py  singleton.py  string_utils.py  task_initializer.py  timing.py
src/agile/web/: __init__.py  common_result.py
tests/: demo_timing.py  test_app_settings.py  test_argparser.py  test_base_structured_tools.py  test_biz_error.py  test_common_result.py  test_env_helper.py  test_extract_chinese_time_range.py  test_extract_time_range.py  test_labeled_int_enum.py  test_labeled_str_enum.py  test_logger.py  test_memory_cache.py  test_milvus_manager.py  test_singleton.py  test_timing.py  test_timing_stack.py
