[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agile"
version = "0.1.12"
description = "An easy-to-use general-purpose Python utility toolkits"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
license = "MIT"
keywords = ["tools", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0.3,<7.0.0",
    "colorlog>=6.10.1,<7.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pyrootutils>=1.0.4,<2.0.0",
    "cachetools>=7.0.5,<8.0.0",
    "typer>=0.24.1,<0.25.0",
    "langchain (>=1.2.15,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pymilvus (>=2.6.11,<3.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "whoosh (>=2.7.4,<3.0.0)",
]

[[project.authors]]
name = "Eric"
email = "whatisjava@hotmail.com"

[project.urls]
Homepage = "https://github.com/thebesteric/agile-py"
Repository = "https://github.com/thebesteric/agile-py"

[project.scripts]
agile = "agile.agile_shell:main"

[tool.poetry]
packages = [
    { include = "agile", from = "src" }
]
include = [
    "src/agile/config/**/*"
]
exclude = [
    "tests/**/*",
    "logs/**/*",
    "dist/**/*",
    "**/.DS_Store"
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
twine = "^6.2.0"
setuptools = "^80.9.0"
wheel = "^0.45.1"
