[metadata]
name = agile
version = 0.1.0
author = Eric Joe
author_email = whatisjava@hotmail.com
description = A simple Python package for demonstration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/my-first-package  # 项目仓库地址
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .