[metadata]
name = agile
version = 0.1.0
author = Eric Joe
author_email = whatisjava@hotmail.com
description = A simple Python package for demonstration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thebesteric/agile-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12
package_data =
    agile = ['config/*.yaml']
[options.packages.find]
where = .