[project]
name = "agile-commons"
version = "0.1.0"
description = "A simple Python package for demonstration"
authors = [
    { name = "eric", email = "whatisjava@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "twine (>=6.2.0,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyrootutils (>=1.0.4,<2.0.0)"
]

packages = [{ include = "agile_commons", from = "." }]
include = [
    { path = "agile_commons/config/**/*", format = "sdist" },
    { path = "agile_commons/config/**/*", format = "wheel" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
