[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agile-commons"
version = "0.1.3"
description = "A simple Python package for demonstration"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thebesteric/agile-py"
repository = "https://github.com/thebesteric/agile-py"
authors = ["Eric <whatisjava@hotmail.com>"]
keywords = ["tools", "utilities"]
packages = [
    { include = "*", from = "src" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "src/config/**/*"
]
exclude = [
    "tests/**/*",
    "logs/**/*",
    "dist/**/*"
]

[tool.poetry.dependencies]
python = ">=3.12"
pyyaml = "^6.0.3"
colorlog = "^6.10.1"
pydantic = "^2.12.5"
pyrootutils = "^1.0.4"
cachetools = "^7.0.0"
typer = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
twine = "^6.2.0"
setuptools = "^80.9.0"
wheel = "^0.45.1"

[tool.poetry.scripts]
agile = "agile_shell:main"